<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rit.csci759.mobile.RuleAddActivity"
    android:background="@color/button_color"  
     >

    <TextView
        android:id="@+id/ui_label_add_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"                
        android:text="@string/ui_label_rule_add" 
        android:textSize="30sp"
        style="@style/CodeFont"
        />
    
   
    
        <Button 
         
        android:id="@+id/new_rule_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"  
        android:layout_alignParentBottom="true" 
        style="@style/CodeFont1"
        android:background="@color/first_stripe"  
        android:text="@string/ui_btn_add_rule"
         />
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"    
        android:layout_centerVertical="true"
        android:layout_above="@id/new_rule_add_button"
        android:layout_below="@id/ui_label_add_rule"
        >
        
    <LinearLayout 
        android:id="@+id/rulesSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        
        >
        
        <TextView
        android:id="@+id/ui_label_add_temp" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"            
        android:text="@string/setTemp" 
        android:textSize="25sp"
        android:layout_gravity="center"
        style="@style/CodeFont2"        
        />
    
     <Spinner
        android:id="@+id/spinner_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"       
         android:layout_gravity="center"
        android:textSize="15sp"        
        style="@style/CodeFont" 
         />
     
       
    <TextView
        android:id="@+id/ui_label_add_boolean" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginTop="10dp"               
         android:layout_gravity="center"        
        android:text="@string/ui_label_boolean" 
        android:textSize="25sp"
        style="@style/CodeFont2"        
        />
    
     <Spinner
        android:id="@+id/spinner_boolean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
          android:layout_gravity="center"       
        android:textSize="15sp"        
        style="@style/CodeFont" 
         />
     
     <TextView
        android:id="@+id/ui_label_add_light" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"     
        android:layout_marginTop="10dp"                     
        android:text="@string/setLight" 
        android:textSize="25sp"
         android:layout_gravity="center"
        style="@style/CodeFont2"        
        />
    
     <Spinner
        android:id="@+id/spinner_light"
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"       
         android:layout_gravity="center"
        android:textSize="15sp"        
        style="@style/CodeFont" 
         />
     
     
      <TextView
        android:id="@+id/ui_label_add_blind" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"     
        android:layout_marginTop="10dp"                     
        android:text="@string/setBlind" 
        android:textSize="25sp"
         android:layout_gravity="center"
        style="@style/CodeFont2"        
        />
    
     <Spinner
        android:id="@+id/spinner_blind"
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"       
         android:layout_gravity="center"
        android:textSize="15sp"        
        style="@style/CodeFont" 
         />
     
     </LinearLayout>
     </ScrollView>    
 

</RelativeLayout>
