<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rit.csci759.mobile.NotificationActivity"
    android:background="@color/button_color"
     >

    
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >
    
      <LinearLayout
          
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
          
           >  
        
    <TextView
        android:id="@+id/ui_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"        
        android:textSize="40sp"     
        style="@style/CodeFont"   
    />
    
    
	   <TextView
        android:id="@+id/ui_label_notifications_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noification_rule"         
        android:gravity="center" 
        android:layout_gravity="center"      
        android:textSize="20sp"     
        style="@style/CodeFont1"   
    />
     
	   <EditText 
	       
	    android:id="@+id/ui_notifications_time"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"                
        android:gravity="center" 
        android:layout_gravity="center"      
        android:textSize="20sp"     
        style="@style/CodeFont1"  
	       
	       
	       />
	   
	   
       <Button 
         
        android:id="@+id/add_notification_rule_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"   
        
        android:gravity="center"
        style="@style/CodeFont1"
        android:background="@color/first_stripe"  
        android:text="@string/ui_btn_add_notification_rule"
         />
       
       
       
       <Button 
         
        android:id="@+id/see_notifications_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"   
        android:layout_below="@id/add_notification_rule_button"           
        android:gravity="center"
        style="@style/CodeFont1"
        android:background="@color/first_stripe"
        android:layout_alignParentBottom="true"  
        android:text="@string/ui_btn_see_notifications"
         />
       
       
       </LinearLayout>  
       
     </ScrollView>  
     
    
      <!-- 
     
     -->

</RelativeLayout>
