<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rit.csci759.mobile.SuggestRuleActivity" 
    android:background="@color/button_color"
    >


    <ScrollView
               
        android:id="@+id/suggest_rule_scroll" 
        android:layout_width="match_parent"
     	android:layout_height="fill_parent"
    
        >
        
        <RelativeLayout             
        android:layout_width="match_parent"
     	android:layout_height="wrap_content"
       	    
        >
            
           <TextView 
               
               android:id="@+id/ui_label_zipcode"
               android:layout_width="match_parent"
     		   android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_alignParentTop="true"               
               android:text="@string/ui_label_zipcode"
               android:textSize="20sp"
        	   style="@style/CodeFont2"
           /> 
            
           
           <EditText 
               
               android:id="@+id/ui_zipcode"
               android:layout_width="match_parent"
     		   android:layout_height="wrap_content"
               android:gravity="center"
               android:textSize="20sp"
               android:layout_below="@id/ui_label_zipcode"
        	   style="@style/CodeFont"
        	   android:layout_marginTop="10dp"
           />
           
           <TextView 
               android:id="@+id/ui_label_outside_temp"
               android:layout_width="match_parent"
     		   android:layout_height="wrap_content"
               android:gravity="center"
               android:text="@string/ui_label_outside_temp"
               style="@style/CodeFont2"
               android:textSize="20sp"
               android:layout_below="@id/ui_zipcode"
        	   android:layout_marginTop="10dp"
               />
           
           <TextView 
               android:id="@+id/outside_temperature"
               android:layout_width="match_parent"
     		   android:layout_height="wrap_content"
               android:gravity="center"
               style="@style/CodeFont"
               android:textSize="30sp"
               android:layout_below="@id/ui_label_outside_temp"
        	   android:layout_marginTop="10dp"
           />
           
           <TextView 
               android:id="@+id/suggested_rule"
               android:layout_width="match_parent"
     		   android:layout_height="wrap_content"
               android:gravity="center"               
               style="@style/CodeFont2"
               android:textSize="20sp"
               android:layout_below="@id/outside_temperature"
        	   android:layout_marginTop="10dp"
           />
           
           <Button 
               android:id="@+id/ui_btn_suggest_rule"
               android:layout_width="match_parent"
     		   android:layout_height="wrap_content"
               android:gravity="center"               
               style="@style/CodeFont2"
               android:textSize="20sp"
               android:layout_marginTop="30dp"
               android:layout_below="@id/suggested_rule"
               android:background="@color/first_stripe"
               
               android:text="@string/ui_btn_suggest_rule"
               />
           
           <Button 
               android:id="@+id/ui_btn_add_suggested_rule"
               android:layout_width="match_parent"
     		   android:layout_height="wrap_content"
               android:gravity="center"               
               style="@style/CodeFont2"
               android:textSize="20sp"
               android:layout_marginTop="10dp"               
               android:background="@color/first_stripe"
               android:layout_below="@id/ui_btn_suggest_rule"
               android:layout_alignParentBottom="true"
               android:text="@string/ui_btn_add_suggested_rule"
             />
           
            
        </RelativeLayout>
        
        
        
    </ScrollView>
    

</RelativeLayout>
